--- a/ask/qa/templates/qa/questions.html
+++ b/ask/qa/templates/qa/questions.html
@@ -13,7 +13,7 @@
         <nav>
             <ul class="pagination">
                 {% for p in paginator.page_range %}
-		    {% if p == page %}
+		    {% if p == page.number %}
  		      <li class="active">
 		    {% else %}
                       <li>
