--- a/ask/qa/templates/qa/questions.html
+++ b/ask/qa/templates/qa/questions.html
@@ -2,7 +2,7 @@
     <head>
     </head>
     <body>
-	{% for q in questionspart %}
+	{% for q in questions %}
 	   <h1>{{ q.title }}</h1>
            <h6>{{ q.added_at }}</h6>
            <h6>{{ q.rating }}</h6>
