--- a/ask/qa/templates/qa/question.html
+++ b/ask/qa/templates/qa/question.html
@@ -2,26 +2,19 @@
     <head>
     </head>
     <body>
-	{% for q in questions %}
-	   <h1>{{ q.title }}</h1>
-           <h6>{{ q.added_at }}</h6>
-           <h6>{{ q.rating }}</h6>
-           <h6>{{ q.author }}</h6>
-           <p>{{ q.text }}</p>
-           <hr>
+        <h1>{{ question.title }}</h1>
+        <h6>{{ question.added_at }}</h6>
+        <h6>{{ question.rating }}</h6>
+        <h6>{{ question.author }}</h6>
+        <p>{{ question.text }}</p>
+        <hr>
+        
+        {% for answer in answers %}
+           <h1>{{ answer.author}}</h1>                                         
+           <h6>{{ answer.added_at }}</h6>
+           <p>{{ answer.text }}</p>
+           <br>
         {% endfor %}
-        <nav>
-            <ul class="pagination">
-                {% for p in paginator.page_range %}
-		    {% if p == page.number %}
- 		      <li class="active">
-		    {% else %}
-                      <li>
-                    {% endif %}
-                          <a href="{{ paginator.baseurl }}{{ p }}">{{ p }}</a>
-                      </li>
-                 {% endfor %}
-             </ul>
-        </nav>
+        <hr>
     </body>
 </html>
