--- a/ask/qa/templates/qa/questions.html
+++ b/ask/qa/templates/qa/questions.html
@@ -1,30 +1,58 @@
 <html>
     <head>
+        <meta charset="utf-8">
+        <title>Simple Django-powered QA application</title>
+        <script src="https://code.jquery.com/jquery-3.5.1.js"
+                integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+                crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
     </head>
     <body>
-	{% for q in questions %}
-	   <h1>{{ q.title }}</h1>
-           <h6>{{ q.added_at }}</h6>
-           <h6>{{ q.rating }}</h6>
-           <h6>{{ q.author }}</h6>
-           <p>{{ q.text }}</p>
-           <a href='/question/{{ q.id  }}/'>Go to question #{{ q.id  }} page</a>
-           <hr>
-        {% endfor %}
-        {% if paginator is not None %}
-        <nav>
-            <ul class="pagination">
-                {% for p in paginator.page_range %}
-		    {% if p == page.number %}
- 		      <li class="active">
-		    {% else %}
-                      <li>
-                    {% endif %}
-                          <a href="{{ paginator.baseurl }}{{ p }}">{{ p }}</a>
-                      </li>
-                 {% endfor %}
-             </ul>
-        </nav>
-       {% endif %}
+		<div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-8 mt-5">
+					{% for q in questions %}
+					<div class="card">
+                        <div class="card-header">
+                            <h1>{{ q.title }}</h1>
+                        </div>
+                        <div class="card-body">
+							<div class="d-flex justify-content-center">
+								<div class="mr-5">{{ q.added_at }}</div>
+								<div >{{ q.rating }}</div>
+								<div class="ml-5">{{ q.author }}</div>
+							</div>
+							<p class="mt-3">{{ q.text }}</p>
+ 						    <hr>
+ 						    <div class="d-flex justify-content-end">
+								<a href='/question/{{ q.id  }}/' class="badge badge-primary">Go to question page</a>
+ 						    </div>
+						</div>
+					</div>
+    				{% endfor %}
+
+					{% if paginator is not None %}
+					<div class="mt-2">
+						<nav aria-label="Page navigation example">
+							<ul class="pagination justify-content-center">
+								{% for p in paginator.page_range %}
+									{% if p == page.number %}
+						 		    	<li class="page-item active">
+									{% else %}
+						                <li class="page-item">
+									{% endif %}
+						            	<a href="{{ paginator.baseurl }}{{ p }}" class="page-link">{{ p }}</a></li>
+								{% endfor %}
+							</ul>
+						</nav>
+					</div>
+				   {% endif %}
+
+				</div>
+			</div>
+       </div>
     </body>
 </html>
