--- a/ask/qa/templates/qa/question.html
+++ b/ask/qa/templates/qa/question.html
@@ -1,20 +1,46 @@
 <html>
     <head>
+        <meta charset="utf-8">
+        <title>Simple Django-powered QA application</title>
+        <script src="https://code.jquery.com/jquery-3.5.1.js"
+                integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+                crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
     </head>
     <body>
-        <h1>{{ question.title }}</h1>
-        <h6>{{ question.added_at }}</h6>
-        <h6>{{ question.rating }}</h6>
-        <h6>{{ question.author }}</h6>
-        <p>{{ question.text }}</p>
-        <hr>
-        
-        {% for answer in answers %}
-           <h1>{{ answer.author}}</h1>                                         
-           <h6>{{ answer.added_at }}</h6>
-           <p>{{ answer.text }}</p>
-           <br>
-        {% endfor %}
-        <hr>
+		<div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-8 mt-5">
+					<div class="card">
+                        <div class="card-header">
+                            <h1>{{ question.title }}</h1>
+                        </div>
+                        <div class="card-body">
+							<div class="d-flex justify-content-center">
+								<div class="mr-5">{{ question.added_at }}</div>
+								<div >{{ question.rating }}</div>
+								<div class="ml-5">{{ question.author }}</div>
+							</div>
+							<p class="mt-3">{{ question.text }}</p>
+						</div>
+					</div>
+					
+			        {% for answer in answers %}	
+					<div class="card">
+                        <div class="card-body">
+							<div class="d-flex justify-content-center">
+								<div class="mr-2">{{ answer.author }}</div>
+								<div class="ml-2">{{ answer.added_at }}</div>
+							</div>
+							<p class="mt-3">{{ answer.text }}</p>
+						</div>
+					</div>
+                   {% endfor %}
+				</div>
+			</div>
+       </div>
     </body>
 </html>
