--- a/ask/qa/templates/qa/questions.html
+++ b/ask/qa/templates/qa/questions.html
@@ -28,12 +28,12 @@
 								<p class="mt-3">{{ q.text }}</p>
 	 						   <hr>
 	 						   <div class="d-flex justify-content-end">
-									<a href='/question/{{ q.id  }}/' class="badge badge-primary">Go to question page</a>
+									<a href='/question/{{ q.id  }}/' class="badge badge-primary">Go to the page of question #{{ q.id }}</a>
  						    	</div>
 							</div>
 						</div>
+						<div class="mt-5"></div>
     					{% endfor %}
-
 						{% if paginator is not None %}
 						<div class="mt-5">
 							<nav aria-label="Page navigation example">
