--- a/ask/qa/templates/qa/add_question.html
+++ b/ask/qa/templates/qa/add_question.html
@@ -16,42 +16,13 @@
             <div class="col-lg-8 mt-5">
                 <div class="card">
                     <div class="card-header">
-                        <h1>{{ question.title }}</h1>
+                        <h1>Write your question here and someone will help you!</h1>
                     </div>
-                    <div class="card-body">
-                        <div class="d-flex justify-content-center">
-                            <div class="mr-5">{{ question.added_at }}</div>
-                            <div >{{ question.rating }}</div>
-                            <div class="ml-5">{{ question.author }}</div>
-                        </div>
-                        <p class="mt-3">{{ question.text }}</p>
-                    </div>
-                </div>
-					
-                {% for answer in answers %}	
-                <div class="card mt-5">
-                    <div class="card-body">
-                        <div class="d-flex justify-content-center">
-                            <div class="mr-2">{{ answer.author }}</div>
-                            <div class="ml-2">{{ answer.added_at }}</div>
-                        </div>
-                        <p class="mt-3">{{ answer.text }}</p>
-                    </div>
-                </div>
-               {% endfor %}
-
-               <div class="mt-5"></div>
-
-               <div class="card">
-                    <div class="card-header bg-primary text-white">
-                            You can help by answering the question!
-                    </div>
-                    
                     <div class="card-body">
                         {% for e in form.non_field_errors %}
                             <div class="alert alert-danger">{{ e }}</div>
                         {% endfor %}
-                        <form class="form-horizontal" method="post" action="/question/{{ question.id }}/">
+                        <form class="form-horizontal" method="post" action="/ask/">
                             {% csrf_token %}
                             <fieldset>
                             {% for field in form %}
