--- a/ask/qa/templates/qa/question.html
+++ b/ask/qa/templates/qa/question.html
@@ -54,12 +54,17 @@
                         <form class="form-horizontal" method="post" action="/question/{{ question.id }}/">
                             {% csrf_token %}
                             <fieldset>
-                            {% for field in form %}
+                            {% for field in form.visible_fields %}
                                 <div class="form-group {% if field.errors %}has-error{% endif %}">
                                     <label class="control-label">{{ field.label }}</label>
                                     <div class="controls">{{ field }}</div>
                                 </div>
-                                {% endfor %}
+                             {% endfor %}
+                             {% for field in form.hidden_fields %}
+                                <div>
+                                    <div>{{ field }}</div>
+                                </div>
+                             {% endfor %}
                             </fieldset>
                             <div class="form-actions d-flex justify-content-end">
                                     <button type="submit" class="btn btn-primary">Save</button>
