--- a/ask/qa/templates/qa/question.html
+++ b/ask/qa/templates/qa/question.html
@@ -1,114 +1,75 @@
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>Simple Django-powered QA application</title>
+{% extends "qa/base.html" %}
 
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    </head>
-    <body>
-    <main>
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-lg-8 mt-5">
-                    <div class="mb-5">
-                        <ul class="nav nav-pills  justify-content-center">
-                            <li class="nav-item">
-                                <a class="nav-link" href="/">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="/ask/">Ask</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Link</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link disabled" href="#">Disabled</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="card">
-                        <div class="card-header">
-                            <h1>{{ question.title }}</h1>
-                        </div>
-                        <div class="card-body">
-                            <div class="d-flex justify-content-center">
-                                <div class="mr-5">{{ question.added_at }}</div>
-                                <div >{{ question.rating }}</div>
-                                <div class="ml-5">{{ question.author }}</div>
-                            </div>
-                            <p class="mt-3">{{ question.text }}</p>
-                        </div>
-                    </div>
+{% block title %}
+	{{ block.super }} – add question
+{% endblock %}
+
+{% block content %}
+    <div class="card">
+        <div class="card-header">
+            <h1>{{ question.title }}</h1>
+        </div>
+        <div class="card-body">
+            <div class="d-flex justify-content-center">
+                <div class="mr-5">{{ question.added_at }}</div>
+                <div >{{ question.rating }}</div>
+                <div class="ml-5"><b>{{ question.author }}</b></div>
+            </div>
+            <p class="mt-3">{{ question.text }}</p>
+        </div>
+    </div>
                         
-                    {% for answer in answers %}	
-                    <div class="card mt-5">
-                        <div class="card-body">
-                            <div class="d-flex justify-content-center">
-                                <div class="mr-2">{{ answer.author }}</div>
-                                <div class="ml-2">{{ answer.added_at }}</div>
-                            </div>
-                            <p class="mt-3">{{ answer.text }}</p>
-                        </div>
-                    </div>
-                   {% endfor %}
-
-                   <div class="mt-5"></div>
-
-                   <div class="card">
-                        <div class="card-header bg-primary text-white">
-                                You can help by answering the question!
-                        </div>
-                        
-                        <div class="card-body">
-                            {% for e in form.non_field_errors %}
-                                <div class="alert alert-danger">{{ e }}</div>
-                            {% endfor %}
-                            <form class="form-horizontal" method="post" action="/question/{{ question.id }}/">
-                                {% csrf_token %}
-                                <fieldset>
-                                {% for field in form.visible_fields %}
-                                    <div class="form-group {% if field.errors %}has-error{% endif %}">
-                                        <label class="control-label">{{ field.label }}</label>
-                                        <div class="controls">{{ field }}</div>
-                                    </div>
-                                 {% endfor %}
-                                 {% for field in form.hidden_fields %}
-                                    <div>
-                                        <div>{{ field }}</div>
-                                    </div>
-                                 {% endfor %}
-                                </fieldset>
-                                <div class="form-actions d-flex justify-content-end">
-                                        <button type="submit" class="btn btn-primary">Save</button>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                <div class="mt-5"></div>
+    {% for answer in answers %}	
+        <div class="card mt-5">
+            <div class="card-body">
+                <div class="d-flex justify-content-center">
+                    <div class="mr-2"><b>{{ answer.author }}</b></div>
+                    <div class="ml-2">{{ answer.added_at }}</div>
                 </div>
+                <p class="mt-3">{{ answer.text }}</p>
             </div>
         </div>
-    </main>
-    <footer class="text-muted">
-      <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-lg-8 mt-5">
-                <p class="float-right">
-                  <a href="#">Back to top</a>
-                </p>
-                <p>QA example is &copy; Bootstrap, but please download and customize it for yourself!</p>
-                <p>New to Bootstrap? <a href="/">Visit the homepage</a> or read our <a href="/">getting started guide</a>.</p>
-            </div>
+    {% endfor %}
+    <div class="mt-5"></div>
+    <div class="card">
+        <div class="card-header {% if user.is_authenticated %} bg-secondary {% else %} bg-dark {% endif %} text-white">
+            {% if user.is_authenticated %}
+                You can help by answering the question!
+            {% else %}
+                You must be logged in to answer questions!
+            {% endif %}
         </div>
-      </div>
-    </footer>
-
-        <!-- Bootstrap core JavaScript
-        ================================================== -->
-        <!-- Placed at the end of the document so the pages load faster -->
-        <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
-    </body>
-</html>
+        {% if user.is_authenticated %}                      
+            <div class="card-body">
+            {% for e in form.non_field_errors %}
+                <div class="alert alert-danger">
+                    {{ e }}
+                </div>
+            {% endfor %}
+            <form class="form-horizontal" method="post" action="/question/{{ question.id }}/">
+                {% csrf_token %}
+                <fieldset>
+                {% for field in form.visible_fields %}
+                    <div class="form-group {% if field.errors %}has-error{% endif %}">
+                        <label class="control-label">{{ field.label }}</label>
+                        <div class="controls">
+                            {{ field }}
+                        </div>
+                    </div>
+                {% endfor %}
+                {% for field in form.hidden_fields %}
+                    <div>
+                        <div>
+                            {{ field }}
+                        </div>
+                    </div>
+                {% endfor %}
+                </fieldset>
+                <div class="form-actions d-flex justify-content-end">
+                    <button type="submit" class="btn btn-secondary" >Save</button>
+                </div>
+            </form>
+            </div>
+        {% endif %}
+    </div>
+{% endblock %}       
