--- a/ask/qa/templates/qa/questions.html
+++ b/ask/qa/templates/qa/questions.html
@@ -1,91 +1,51 @@
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>Simple Django-powered QA application</title>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    </head>
-    <body>
-      <main>
-		<div class="container">
-            <div class="row justify-content-center">
-                <div class="col-lg-8 mt-5">
-                    <div class="mb-5">
-                        <ul class="nav nav-pills  justify-content-center">
-                          <li class="nav-item">
-                            <a class="nav-link active" href="/">Home</a>
-                          </li>
-                          <li class="nav-item">
-                            <a class="nav-link" href="/ask/">Ask</a>
-                          </li>
-                          <li class="nav-item">
-                            <a class="nav-link" href="#">Link</a>
-                          </li>
-                          <li class="nav-item">
-                            <a class="nav-link disabled" href="#">Disabled</a>
-                          </li>
-                        </ul>
+{% extends "qa/base.html" %}
+
+{% block title %}
+	{{ block.super }} – главная
+{% endblock %}
+
+{% block extrahead %}
+    <style>
+        .pagination>li.active>a {
+            background-color: orange !important;
+        }
+    </style>
+{% endblock %}
+
+{% block content %}
+    {% for q in questions %}
+        <div class="card">
+            <div class="card-header"><h1>{{ q.title }}</h1>
+            </div>
+            <div class="card-body">
+                <div class="d-flex justify-content-center">
+                    <div class="mr-5">{{ q.added_at }}</div>
+                        <div >{{ q.rating }}</div>
+                        <div class="ml-5">{{ q.author }}</div>
                     </div>
-                    
-					 {% for q in questions %}
-					 <div class="card">
-                     <div class="card-header">
-                     	<h1>{{ q.title }}</h1>
-                     </div>
-                     <div class="card-body">
-								<div class="d-flex justify-content-center">
-									<div class="mr-5">{{ q.added_at }}</div>
-									<div >{{ q.rating }}</div>
-									<div class="ml-5">{{ q.author }}</div>
-								</div>
-								<p class="mt-3">{{ q.text }}</p>
-	 						   <hr>
-	 						   <div class="d-flex justify-content-end">
-									<a href='/question/{{ q.id  }}/' class="badge badge-primary">Go to the page of question #{{ q.id }}</a>
- 						    	</div>
-							</div>
-						</div>
-						<div class="mt-5"></div>
-    					{% endfor %}
-						{% if paginator is not None %}
-						<div class="mt-5">
-							<nav aria-label="Page navigation example">
-								<ul class="pagination justify-content-center">
-									{% for p in paginator.page_range %}
-										{% if p == page.number %}
-							 		    	<li class="page-item active">
-										{% else %}
-							            <li class="page-item">
-										{% endif %}
-							            <a href="{{ paginator.baseurl }}{{ p }}" class="page-link">{{ p }}</a></li>
-									{% endfor %}
-								</ul>
-							</nav>
-						</div>
-				      {% endif %}
-				</div>
-			</div>
-       </div>
-    </main>
-    <footer class="text-muted">
-      <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-lg-8 mt-5">
-                <p class="float-right">
-                  <a href="#">Back to top</a>
-                </p>
-                <p>QA example is &copy; Bootstrap, but please download and customize it for yourself!</p>
-                <p>New to Bootstrap? <a href="/">Visit the homepage</a> or read our <a href="/">getting started guide</a>.</p>
+                <p class="mt-3">{{ q.text }}</p>
+                <hr>
+                <div class="d-flex justify-content-end">
+                    <a href='/question/{{ q.id  }}/' class="badge badge-secondary">Go to the page of question #{{ q.id }}</a>
+                </div>
             </div>
         </div>
-      </div>
-    </footer>
-
-        <!-- Bootstrap core JavaScript
-        ================================================== -->
-        <!-- Placed at the end of the document so the pages load faster -->
-        <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
-    </body>
-</html>
+        <div class="mt-5"></div>
+    {% endfor %}
+    {% if paginator != None %}
+        <div class="mt-5">
+            <nav aria-label="Page navigation example">
+                <ul class="pagination justify-content-center">
+                    {% for p in paginator.page_range %}
+                        {% if p == page.number %}
+                            <li class="page-item bd-highlight active">
+                        {% else %}
+                            <li class="page-item text-dark">
+                        {% endif %}
+                            <a href="{{ paginator.baseurl }}{{ p }}" class="text-dark page-link">{{ p }}</a></li>
+                    {% endfor %}
+                </ul>
+            </nav>
+        </div>
+    {% endif %}
+{% endblock %}       
