--- a/ask/qa/templates/qa/base.html
+++ b/ask/qa/templates/qa/base.html
@@ -38,7 +38,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-8 mt-5">
                     <p class="float-right"><a class="text-dark" href="#">Back to top</a></p>
-                    <p><b>QA app</b> is &copy; Django powered example and use &copy; Bootstrap for design, but please download and customize it for yourself!</p>
+                    <p><b>QA app</b> is &copy; Django powered application example with using &copy; Bootstrap design , please download and customize it for yourself!</p>
                     <p>New to Bootstrap? <a class="text-dark" href="/">Visit the homepage</a> or read our <a class="text-dark" shref="/">getting started guide</a>.</p>
                 </div>
             </div>
