--- a/ask/qa/templates/qa/login.html
+++ b/ask/qa/templates/qa/login.html
@@ -31,6 +31,7 @@
                             </div>
                         </div>
                     {% endfor %}
+                        <input type="hidden" name="next" value="{{ request.GET.next }}" />
                     </fieldset>
                     <div class="form-actions d-flex justify-content-end">
                         <button type="submit" class="btn btn-secondary">Login</button>
