--- a/ask/qa/templates/qa/base.html
+++ b/ask/qa/templates/qa/base.html
@@ -36,10 +36,8 @@
         <footer class="text-muted">
           <div class="container">
             <div class="row justify-content-center">
-                <div class="col-lg-8 mt-5">
-                    <p class="float-right"><a class="text-dark" href="#">Back to top</a></p>
-                    <p><b>QA app</b> is &copy; Django powered application example with using &copy; Bootstrap design , please download and customize it for yourself!</p>
-                    <p>New to Bootstrap? <a class="text-dark" href="/">Visit the homepage</a> or read our <a class="text-dark" shref="/">getting started guide</a>.</p>
+                <div class="col-lg-8 mt-5 text-center">
+                    <p><small>© 2021 You can see the source code on my <a href="https://github.com/streamdp/simple_django_based_website">GitHub</a></small></p>
                 </div>
             </div>
           </div>
